crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__environments__vmatrix_display.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..44
  matrix Matrix "|" "|" @0..44
    row 0:
      row @16..17
        run "a" @16..17
      row @20..21
        run "b" @20..21
    row 1:
      row @25..26
        run "c" @25..26
      row @29..30
        run "d" @29..30
-- problems --
